--- a/demo/demo1.html
+++ b/demo/demo1.html
@@ -3,26 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Demo</title>
-  <style>
-    #div1 {
-      width: 150px;
-      height: 150px;
-      background-color: red;
-      position: absolute;
-    }
-  </style>
 </head>
 <body>
-<h2>Hello World</h2>
-<div id="div1">Content</div>
+<div id="type"></div>
 <script src="../dist/typewrite.0.0.1.min.js"></script>
 <script>
-  var div = document.getElementById('div1');
-  typewrite.move({
-    step: function (delta) {
-      div.style.left = 100*delta + 'px';
-    }
+  typewrite.init('#type', {
+    duration: 3000
   });
-</script>
+  </script>
 </body>
 </html>
