--- a/demo/demo1.html
+++ b/demo/demo1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Demo</title>
+  <title>Demo1</title>
 </head>
 <body>
 <div id="type"></div>
